crates/capsec-tests/tests/compile_fail/sealed_has_no_external_impl.rs
/// The Has<P> trait is sealed — external crates cannot implement it.
/// This prevents forging capability proofs outside capsec-core.
use capsec::prelude::*;

struct FakeCap;

impl Has<FsRead> for FakeCap {
    fn cap_ref(&self) -> Cap<FsRead> {
        loop {}
    }
}

fn main() {}
