crates/capsec-tests/tests/compile_fail/sealed_has_no_external_impl.stderr
error[E0277]: the trait bound `FakeCap: capsec_core::has::sealed::Sealed<capsec::FsRead>` is not satisfied
 --> tests/compile_fail/sealed_has_no_external_impl.rs:7:22
  |
7 | impl Has<FsRead> for FakeCap {
  |                      ^^^^^^^ unsatisfied trait bound
  |
help: the trait `capsec_core::has::sealed::Sealed<capsec::FsRead>` is not implemented for `FakeCap`
 --> tests/compile_fail/sealed_has_no_external_impl.rs:5:1
  |
5 | struct FakeCap;
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `capsec_core::has::sealed::Sealed<P>`:
            `capsec::Cap<(Ambient, Ambient)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvRead)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvRead)>` implements `capsec_core::has::sealed::Sealed<EnvRead>`
            `capsec::Cap<(Ambient, EnvWrite)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvWrite)>` implements `capsec_core::has::sealed::Sealed<EnvWrite>`
            `capsec::Cap<(Ambient, FsAll)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, FsAll)>` implements `capsec_core::has::sealed::Sealed<FsAll>`
            `capsec::Cap<(Ambient, FsWrite)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
          and $N others
note: required by a bound in `capsec::Has`
 --> $WORKSPACE/crates/capsec-core/src/has.rs
  |
  | pub trait Has<P: Permission>: sealed::Sealed<P> {
  |                               ^^^^^^^^^^^^^^^^^ required by this bound in `Has`
  = note: `Has` is a "sealed trait", because to implement it you also need to implement `capsec_core::has::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            capsec::Cap<P>
            capsec::Cap<capsec::FsAll>
            capsec::Cap<capsec::FsAll>
            capsec::Cap<capsec::NetAll>
            capsec::Cap<capsec::NetAll>
            capsec::Cap<capsec::Ambient>
            capsec::Cap<capsec::Ambient>
            capsec::Cap<capsec::Ambient>
          and $N others
